--- a/WorkSpace/Way2Automate/src/test/resource/OR.properties
+++ b/WorkSpace/Way2Automate/src/test/resource/OR.properties
@@ -1,1 +1,13 @@
 //Test Checkin : Abhinav
+
+//**********************RegistrationPage********************
+//TextBox
+RegistrationName = //*[@name='name']
+RegistrationPhone = //*[@name='phone']
+RegistrationEmail = //*[@name='email']
+RegistrationCity = //*[@name='city']
+RegistrationUsername = //*[contains(text(),'Registration Form')]/..//*[@name='username']
+RegistrationPassword = //*[contains(text(),'Registration Form')]/..//*[@name='password']
+
+//Button
+RegistrationSubmitBtn = //*[contains(text(),'Registration Form')]/..//*[@type='submit']
