--- a/WorkSpace/Way2Automate/pom.xml
+++ b/WorkSpace/Way2Automate/pom.xml
@@ -53,6 +53,10 @@
     <artifactId>poi-ooxml</artifactId>
     <version>3.11</version>
 </dependency>
-    
+    <dependency>
+    <groupId>com.relevantcodes</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>2.41.2</version>
+    </dependency>
   </dependencies>
 </project>
